fix top story spacing

--- a/05week/BootstrapResponsiveUtilityProject/css/style.css
+++ b/05week/BootstrapResponsiveUtilityProject/css/style.css
@@ -8,11 +8,16 @@
 }
 #sidestories ul {
   list-style: none;
-  line-height: 1.5;
   font-weight: bold;
   font-size: 18px;
   color: black;
   margin: 20px;
+
+}
+
+#sidestories li{
+  margin-bottom: 15px;
+
 }
 .cta{
   color: white;
@@ -27,7 +32,6 @@
   font-weight: bold;
   font-size: 18px;
   color: black;
-  line-height: 2;
 }
 #footer{
   background-color: rgb(93, 93, 93);
